pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  labels:
    app: my-node-app
spec:
  containers:
    - name: my-node-container
      image: node:18
      ports:
        - containerPort: 3000
