service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: NodePort
  selector:
    app: my-node-app
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 31000
